--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -35,4 +38,271 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+.content {
+  min-height: 534px;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -12%);
+  gap:30px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-self: self-end;
+  gap: 16px;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+}
+
+.content__details {
+  width: 100%;
+  height: 534px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 26px;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 54px;
+  gap: 26px;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+  border: none;
+  width: 100%
+}
+input[type='text']{
+ width: 225px;
+}
+
+.search-form__fieldset-title {
+  color: #FFF;
+  font-family: Fira Sans Condensed, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-form__label {
+  display: flex;
+  width:100%;
+  cursor: pointer;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  width: 100%;
+}
+
+label.search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.search-form__pseudo-checkbox {
+  height: 19px;
+  width: 19px;
+  border: solid 1px #fff;
+}
+
+input[type="checkbox"].visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+input[type="checkbox"]:checked + span::before {
+  display: block;
+  margin: 0 auto;
+  content: " ";
+  width: 15px;
+  height: 15px;
+  background-color: #ffffff;
+  transform: translate(0%, 9%);
+}
+
+.search-form__label-text {
+  margin-right: 10px;
+}
+
+.button {
+  align-self: self-end;
+  height: 34px;
+  width: 100%;
+  border: 1px solid #FFF;
+  background-color: inherit;
+  cursor: pointer;
+}
+
+button.search-form__submit-button {
+   min-width: 149px;
+}
+
+.search-form__submit-button,
+.more-button {
+  padding: 0;
+  color: #FFF;
+  text-align: center;
+  font-family: Fira Sans Condensed, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+input[type="text"]:focus,
+label.search-form__label:focus,
+.search-form__submit-button:focus,
+.content__list-item:focus {
+  outline: none;
+}
+
+
+input[type="text"]:has(:focus-visible),
+label.search-form__label:focus-within,
+ .search-form__submit-button:focus-within,
+ .content__list-item:focus-visible {
+  outline: 1px solid #fff;
+}
+
+button.search-form__submit-button:hover,
+ .search-form__label-text:hover,
+ .content__video-card:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+button.search-form__submit-button:active,
+.content__video-card:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+span.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.title {
+  color: #FFF;
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+  gap: 26px;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.search-form__textfield {
+  background-color: inherit;
+  appearance: none;
+  width: 100%;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  color: rgba(255, 255, 255, 0.70);
+  font-family: Fira Sans Condensed, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.content__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  /*height: 200px;*/
+  gap: 30px;
+  overflow: hidden scroll;
+  border: none;
+}
+
+.content__list::-webkit-scrollbar {
+  width: 0;
+}
+
+.content__list-item {
+  height: 103px;
+  margin: 2px;
+}
+
+.content__card-link {
+  color: #FFF;
+  font-family: Oswald;
+  text-decoration: none;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content__video-card-title {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: Fira Sans Condensed, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16.2px;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  flex-shrink: 0;
+}
+
+.content__video-card-description-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
